# github-app-for-code-change

./: .gitignore  .gitpod.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.gitpod/: Dockerfile
bazel/go/: deps.bzl
bazel/rules/: deps.bzl
bazel/scripts/: stamp.bash
cmd/githubapp/: BUILD.bazel  main.go
cmd/githubapp/cmd/: BUILD.bazel  root.go  start.go  version.go
docs/: INSTALL.md
internal/routes/: BUILD.bazel  commit.go  events.go  health.go  server.go
internal/storage/: BUILD.bazel  storage.go
pkg/actions/: BUILD.bazel  start.go
pkg/config/: BUILD.bazel  container.go
pkg/config/v1/: BUILD.bazel  config.go
pkg/github/tree/: BUILD.bazel  write.go
pkg/githubwebapp/: BUILD.bazel  middleware.go
templates/: config.yaml
