load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "actions",
    srcs = ["start.go"],
    importpath = "github.com/jrbeverly/github-app-for-code-change/pkg/actions",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/routes",
        "//pkg/config/v1:config",
    ],
)
