load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "githubwebapp",
    srcs = ["middleware.go"],
    importpath = "github.com/jrbeverly/github-app-for-code-change/pkg/githubwebapp",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/storage",
        "@com_github_bradleyfalzon_ghinstallation//:ghinstallation",
        "@com_github_google_go_github//github",
        "@com_github_justinas_alice//:alice",
    ],
)
